# SineKit

./: .gitignore  CMakeLists.txt  README.md  SineKit.cpp
src/: EndianHelpers.h  Extended80.h  SineKit.cpp  SineKit.h
src/headers/: AIFFHeaders.cpp  AIFFHeaders.h  DSFHeaders.cpp  DSFHeaders.h  HeaderTags.h  WAVHeaders.cpp  WAVHeaders.h
src/lib/: CustomFloat.h  CustomTypes.h  EndianHelpers.h
